them api don hang hien va them
